adding share buttons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	<link rel="stylesheet" href="styles/site.css">
 </head>
 <body ng-controller="MainController" ng-keydown='keyPressed($event)'>
+	<iframe 
+	src="http://ghbtns.com/github-btn.html?user=chinmaymk&repo=wq&type=watch&count=true"  allowtransparency="true" 
+	frameborder="0" scrolling="0" width="90" height="20"></iframe>
+	<iframe 
+	src="http://ghbtns.com/github-btn.html?user=chinmaymk&repo=wq&type=fork&count=true"  allowtransparency="true" 
+	frameborder="0" scrolling="0" width="90" height="20"></iframe>
 	<div class="container">
 		<table class='wq-list'>
 			<tr>
